--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.5.0",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
